Make sure transaction title + result pill wraps.

--- a/src/assets/styles/explorer.scss
+++ b/src/assets/styles/explorer.scss
@@ -75,6 +75,12 @@ body {
     font-size: 30px;
     line-height: 36px;
 }
+@media (max-width: 1079px) {
+    .h-is-primary-title {
+        font-size: 24px;
+        line-height: 29px;
+    }
+}
 @media (max-width: 767px) {
     .h-is-primary-title {
         font-size: 16px;
@@ -106,9 +112,16 @@ body {
     line-height: 41px;
     letter-spacing: -0.05em;
 }
+@media (max-width: 1079px) {
+    .h-is-secondary-text {
+        font-size: 26px;
+        line-height: 31px;
+    }
+}
 @media (max-width: 767px) {
     .h-is-secondary-text {
         font-size: 18px;
+        line-height: 22px;
     }
 }
 .h-is-tertiary-text {
